// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Streak should render 0% progress state 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Streak
    currentStreak={0}
    isFinished={false}
    maxStreak={1}
    onPress={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Component
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#e20177",
            "borderBottomLeftRadius": 110,
            "borderTopLeftRadius": 110,
            "flexDirection": "row",
            "height": 110,
            "justifyContent": "flex-end",
            "position": "absolute",
            "right": 0,
            "top": 160,
          }
        }
      >
        <Pad
          width={20}
        />
        <YuText
          style={
            Object {
              "color": "white",
              "fontSize": 36,
              "marginRight": 24,
              "marginTop": 8,
            }
          }
        >
          0/1
        </YuText>
        <Calendar
          backgroundColor="#e20177"
          progress={0}
          scale={0.5}
        />
        <Pad
          width={15}
        />
      </Component>,
      "onPressIn": [Function],
      "onPressOut": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Pad
            width={20}
          />,
          <YuText
            style={
              Object {
                "color": "white",
                "fontSize": 36,
                "marginRight": 24,
                "marginTop": 8,
              }
            }
          >
            0/1
          </YuText>,
          <Calendar
            backgroundColor="#e20177"
            progress={0}
            scale={0.5}
          />,
          <Pad
            width={15}
          />,
        ],
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "#e20177",
          "borderBottomLeftRadius": 110,
          "borderTopLeftRadius": 110,
          "flexDirection": "row",
          "height": 110,
          "justifyContent": "flex-end",
          "position": "absolute",
          "right": 0,
          "top": 160,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "width": 20,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "0/1",
            "style": Object {
              "color": "white",
              "fontSize": 36,
              "marginRight": 24,
              "marginTop": 8,
            },
          },
          "ref": null,
          "rendered": "0/1",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "backgroundColor": "#e20177",
            "progress": 0,
            "scale": 0.5,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "width": 15,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Component
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#e20177",
              "borderBottomLeftRadius": 110,
              "borderTopLeftRadius": 110,
              "flexDirection": "row",
              "height": 110,
              "justifyContent": "flex-end",
              "position": "absolute",
              "right": 0,
              "top": 160,
            }
          }
        >
          <Pad
            width={20}
          />
          <YuText
            style={
              Object {
                "color": "white",
                "fontSize": 36,
                "marginRight": 24,
                "marginTop": 8,
              }
            }
          >
            0/1
          </YuText>
          <Calendar
            backgroundColor="#e20177"
            progress={0}
            scale={0.5}
          />
          <Pad
            width={15}
          />
        </Component>,
        "onPressIn": [Function],
        "onPressOut": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Pad
              width={20}
            />,
            <YuText
              style={
                Object {
                  "color": "white",
                  "fontSize": 36,
                  "marginRight": 24,
                  "marginTop": 8,
                }
              }
            >
              0/1
            </YuText>,
            <Calendar
              backgroundColor="#e20177"
              progress={0}
              scale={0.5}
            />,
            <Pad
              width={15}
            />,
          ],
          "style": Object {
            "alignItems": "center",
            "backgroundColor": "#e20177",
            "borderBottomLeftRadius": 110,
            "borderTopLeftRadius": 110,
            "flexDirection": "row",
            "height": 110,
            "justifyContent": "flex-end",
            "position": "absolute",
            "right": 0,
            "top": 160,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "width": 20,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "0/1",
              "style": Object {
                "color": "white",
                "fontSize": 36,
                "marginRight": 24,
                "marginTop": 8,
              },
            },
            "ref": null,
            "rendered": "0/1",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "backgroundColor": "#e20177",
              "progress": 0,
              "scale": 0.5,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "width": 15,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Streak should render 50% progress state 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Streak
    currentStreak={1}
    isFinished={false}
    maxStreak={2}
    onPress={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Component
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#e20177",
            "borderBottomLeftRadius": 110,
            "borderTopLeftRadius": 110,
            "flexDirection": "row",
            "height": 110,
            "justifyContent": "flex-end",
            "position": "absolute",
            "right": 0,
            "top": 160,
          }
        }
      >
        <Pad
          width={20}
        />
        <YuText
          style={
            Object {
              "color": "white",
              "fontSize": 36,
              "marginRight": 24,
              "marginTop": 8,
            }
          }
        >
          1/2
        </YuText>
        <Calendar
          backgroundColor="#e20177"
          progress={50}
          scale={0.5}
        />
        <Pad
          width={15}
        />
      </Component>,
      "onPressIn": [Function],
      "onPressOut": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Pad
            width={20}
          />,
          <YuText
            style={
              Object {
                "color": "white",
                "fontSize": 36,
                "marginRight": 24,
                "marginTop": 8,
              }
            }
          >
            1/2
          </YuText>,
          <Calendar
            backgroundColor="#e20177"
            progress={50}
            scale={0.5}
          />,
          <Pad
            width={15}
          />,
        ],
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "#e20177",
          "borderBottomLeftRadius": 110,
          "borderTopLeftRadius": 110,
          "flexDirection": "row",
          "height": 110,
          "justifyContent": "flex-end",
          "position": "absolute",
          "right": 0,
          "top": 160,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "width": 20,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "1/2",
            "style": Object {
              "color": "white",
              "fontSize": 36,
              "marginRight": 24,
              "marginTop": 8,
            },
          },
          "ref": null,
          "rendered": "1/2",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "backgroundColor": "#e20177",
            "progress": 50,
            "scale": 0.5,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "width": 15,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Component
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#e20177",
              "borderBottomLeftRadius": 110,
              "borderTopLeftRadius": 110,
              "flexDirection": "row",
              "height": 110,
              "justifyContent": "flex-end",
              "position": "absolute",
              "right": 0,
              "top": 160,
            }
          }
        >
          <Pad
            width={20}
          />
          <YuText
            style={
              Object {
                "color": "white",
                "fontSize": 36,
                "marginRight": 24,
                "marginTop": 8,
              }
            }
          >
            1/2
          </YuText>
          <Calendar
            backgroundColor="#e20177"
            progress={50}
            scale={0.5}
          />
          <Pad
            width={15}
          />
        </Component>,
        "onPressIn": [Function],
        "onPressOut": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Pad
              width={20}
            />,
            <YuText
              style={
                Object {
                  "color": "white",
                  "fontSize": 36,
                  "marginRight": 24,
                  "marginTop": 8,
                }
              }
            >
              1/2
            </YuText>,
            <Calendar
              backgroundColor="#e20177"
              progress={50}
              scale={0.5}
            />,
            <Pad
              width={15}
            />,
          ],
          "style": Object {
            "alignItems": "center",
            "backgroundColor": "#e20177",
            "borderBottomLeftRadius": 110,
            "borderTopLeftRadius": 110,
            "flexDirection": "row",
            "height": 110,
            "justifyContent": "flex-end",
            "position": "absolute",
            "right": 0,
            "top": 160,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "width": 20,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "1/2",
              "style": Object {
                "color": "white",
                "fontSize": 36,
                "marginRight": 24,
                "marginTop": 8,
              },
            },
            "ref": null,
            "rendered": "1/2",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "backgroundColor": "#e20177",
              "progress": 50,
              "scale": 0.5,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "width": 15,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Streak should render 100% progress state 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Streak
    currentStreak={1}
    isFinished={false}
    maxStreak={1}
    onPress={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Component
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#e20177",
            "borderBottomLeftRadius": 110,
            "borderTopLeftRadius": 110,
            "flexDirection": "row",
            "height": 110,
            "justifyContent": "flex-end",
            "position": "absolute",
            "right": 0,
            "top": 160,
          }
        }
      >
        <Pad
          width={20}
        />
        <YuText
          style={
            Object {
              "color": "white",
              "fontSize": 36,
              "marginRight": 24,
              "marginTop": 8,
            }
          }
        >
          1/1
        </YuText>
        <Calendar
          backgroundColor="#e20177"
          progress={100}
          scale={0.5}
        />
        <Pad
          width={15}
        />
      </Component>,
      "onPressIn": [Function],
      "onPressOut": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Pad
            width={20}
          />,
          <YuText
            style={
              Object {
                "color": "white",
                "fontSize": 36,
                "marginRight": 24,
                "marginTop": 8,
              }
            }
          >
            1/1
          </YuText>,
          <Calendar
            backgroundColor="#e20177"
            progress={100}
            scale={0.5}
          />,
          <Pad
            width={15}
          />,
        ],
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "#e20177",
          "borderBottomLeftRadius": 110,
          "borderTopLeftRadius": 110,
          "flexDirection": "row",
          "height": 110,
          "justifyContent": "flex-end",
          "position": "absolute",
          "right": 0,
          "top": 160,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "width": 20,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "1/1",
            "style": Object {
              "color": "white",
              "fontSize": 36,
              "marginRight": 24,
              "marginTop": 8,
            },
          },
          "ref": null,
          "rendered": "1/1",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "backgroundColor": "#e20177",
            "progress": 100,
            "scale": 0.5,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "width": 15,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Component
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#e20177",
              "borderBottomLeftRadius": 110,
              "borderTopLeftRadius": 110,
              "flexDirection": "row",
              "height": 110,
              "justifyContent": "flex-end",
              "position": "absolute",
              "right": 0,
              "top": 160,
            }
          }
        >
          <Pad
            width={20}
          />
          <YuText
            style={
              Object {
                "color": "white",
                "fontSize": 36,
                "marginRight": 24,
                "marginTop": 8,
              }
            }
          >
            1/1
          </YuText>
          <Calendar
            backgroundColor="#e20177"
            progress={100}
            scale={0.5}
          />
          <Pad
            width={15}
          />
        </Component>,
        "onPressIn": [Function],
        "onPressOut": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Pad
              width={20}
            />,
            <YuText
              style={
                Object {
                  "color": "white",
                  "fontSize": 36,
                  "marginRight": 24,
                  "marginTop": 8,
                }
              }
            >
              1/1
            </YuText>,
            <Calendar
              backgroundColor="#e20177"
              progress={100}
              scale={0.5}
            />,
            <Pad
              width={15}
            />,
          ],
          "style": Object {
            "alignItems": "center",
            "backgroundColor": "#e20177",
            "borderBottomLeftRadius": 110,
            "borderTopLeftRadius": 110,
            "flexDirection": "row",
            "height": 110,
            "justifyContent": "flex-end",
            "position": "absolute",
            "right": 0,
            "top": 160,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "width": 20,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "1/1",
              "style": Object {
                "color": "white",
                "fontSize": 36,
                "marginRight": 24,
                "marginTop": 8,
              },
            },
            "ref": null,
            "rendered": "1/1",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "backgroundColor": "#e20177",
              "progress": 100,
              "scale": 0.5,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "width": 15,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Streak should render finished state 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Streak
    currentStreak={0}
    isFinished={false}
    maxStreak={0}
    onPress={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Component
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#e20177",
            "borderBottomLeftRadius": 110,
            "borderTopLeftRadius": 110,
            "flexDirection": "row",
            "height": 110,
            "justifyContent": "flex-end",
            "position": "absolute",
            "right": 0,
            "top": 160,
          }
        }
      >
        <Pad
          width={20}
        />
        <YuText
          style={
            Object {
              "color": "white",
              "fontSize": 36,
              "marginRight": 24,
              "marginTop": 8,
            }
          }
        >
          0/1
        </YuText>
        <Calendar
          backgroundColor="#e20177"
          progress={NaN}
          scale={0.5}
        />
        <Pad
          width={15}
        />
      </Component>,
      "onPressIn": [Function],
      "onPressOut": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Pad
            width={20}
          />,
          <YuText
            style={
              Object {
                "color": "white",
                "fontSize": 36,
                "marginRight": 24,
                "marginTop": 8,
              }
            }
          >
            0/1
          </YuText>,
          <Calendar
            backgroundColor="#e20177"
            progress={NaN}
            scale={0.5}
          />,
          <Pad
            width={15}
          />,
        ],
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "#e20177",
          "borderBottomLeftRadius": 110,
          "borderTopLeftRadius": 110,
          "flexDirection": "row",
          "height": 110,
          "justifyContent": "flex-end",
          "position": "absolute",
          "right": 0,
          "top": 160,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "width": 20,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "0/1",
            "style": Object {
              "color": "white",
              "fontSize": 36,
              "marginRight": 24,
              "marginTop": 8,
            },
          },
          "ref": null,
          "rendered": "0/1",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "backgroundColor": "#e20177",
            "progress": NaN,
            "scale": 0.5,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "width": 15,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Component
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#e20177",
              "borderBottomLeftRadius": 110,
              "borderTopLeftRadius": 110,
              "flexDirection": "row",
              "height": 110,
              "justifyContent": "flex-end",
              "position": "absolute",
              "right": 0,
              "top": 160,
            }
          }
        >
          <Pad
            width={20}
          />
          <YuText
            style={
              Object {
                "color": "white",
                "fontSize": 36,
                "marginRight": 24,
                "marginTop": 8,
              }
            }
          >
            0/1
          </YuText>
          <Calendar
            backgroundColor="#e20177"
            progress={NaN}
            scale={0.5}
          />
          <Pad
            width={15}
          />
        </Component>,
        "onPressIn": [Function],
        "onPressOut": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Pad
              width={20}
            />,
            <YuText
              style={
                Object {
                  "color": "white",
                  "fontSize": 36,
                  "marginRight": 24,
                  "marginTop": 8,
                }
              }
            >
              0/1
            </YuText>,
            <Calendar
              backgroundColor="#e20177"
              progress={NaN}
              scale={0.5}
            />,
            <Pad
              width={15}
            />,
          ],
          "style": Object {
            "alignItems": "center",
            "backgroundColor": "#e20177",
            "borderBottomLeftRadius": 110,
            "borderTopLeftRadius": 110,
            "flexDirection": "row",
            "height": 110,
            "justifyContent": "flex-end",
            "position": "absolute",
            "right": 0,
            "top": 160,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "width": 20,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "0/1",
              "style": Object {
                "color": "white",
                "fontSize": 36,
                "marginRight": 24,
                "marginTop": 8,
              },
            },
            "ref": null,
            "rendered": "0/1",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "backgroundColor": "#e20177",
              "progress": NaN,
              "scale": 0.5,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "width": 15,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Streak should render unfinished state 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Streak
    currentStreak={0}
    isFinished={false}
    maxStreak={0}
    onPress={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Component
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#e20177",
            "borderBottomLeftRadius": 110,
            "borderTopLeftRadius": 110,
            "flexDirection": "row",
            "height": 110,
            "justifyContent": "flex-end",
            "position": "absolute",
            "right": 0,
            "top": 160,
          }
        }
      >
        <Pad
          width={20}
        />
        <YuText
          style={
            Object {
              "color": "white",
              "fontSize": 36,
              "marginRight": 24,
              "marginTop": 8,
            }
          }
        >
          0/1
        </YuText>
        <Calendar
          backgroundColor="#e20177"
          progress={NaN}
          scale={0.5}
        />
        <Pad
          width={15}
        />
      </Component>,
      "onPressIn": [Function],
      "onPressOut": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Pad
            width={20}
          />,
          <YuText
            style={
              Object {
                "color": "white",
                "fontSize": 36,
                "marginRight": 24,
                "marginTop": 8,
              }
            }
          >
            0/1
          </YuText>,
          <Calendar
            backgroundColor="#e20177"
            progress={NaN}
            scale={0.5}
          />,
          <Pad
            width={15}
          />,
        ],
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "#e20177",
          "borderBottomLeftRadius": 110,
          "borderTopLeftRadius": 110,
          "flexDirection": "row",
          "height": 110,
          "justifyContent": "flex-end",
          "position": "absolute",
          "right": 0,
          "top": 160,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "width": 20,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "0/1",
            "style": Object {
              "color": "white",
              "fontSize": 36,
              "marginRight": 24,
              "marginTop": 8,
            },
          },
          "ref": null,
          "rendered": "0/1",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "backgroundColor": "#e20177",
            "progress": NaN,
            "scale": 0.5,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "width": 15,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Component
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#e20177",
              "borderBottomLeftRadius": 110,
              "borderTopLeftRadius": 110,
              "flexDirection": "row",
              "height": 110,
              "justifyContent": "flex-end",
              "position": "absolute",
              "right": 0,
              "top": 160,
            }
          }
        >
          <Pad
            width={20}
          />
          <YuText
            style={
              Object {
                "color": "white",
                "fontSize": 36,
                "marginRight": 24,
                "marginTop": 8,
              }
            }
          >
            0/1
          </YuText>
          <Calendar
            backgroundColor="#e20177"
            progress={NaN}
            scale={0.5}
          />
          <Pad
            width={15}
          />
        </Component>,
        "onPressIn": [Function],
        "onPressOut": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Pad
              width={20}
            />,
            <YuText
              style={
                Object {
                  "color": "white",
                  "fontSize": 36,
                  "marginRight": 24,
                  "marginTop": 8,
                }
              }
            >
              0/1
            </YuText>,
            <Calendar
              backgroundColor="#e20177"
              progress={NaN}
              scale={0.5}
            />,
            <Pad
              width={15}
            />,
          ],
          "style": Object {
            "alignItems": "center",
            "backgroundColor": "#e20177",
            "borderBottomLeftRadius": 110,
            "borderTopLeftRadius": 110,
            "flexDirection": "row",
            "height": 110,
            "justifyContent": "flex-end",
            "position": "absolute",
            "right": 0,
            "top": 160,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "width": 20,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "0/1",
              "style": Object {
                "color": "white",
                "fontSize": 36,
                "marginRight": 24,
                "marginTop": 8,
              },
            },
            "ref": null,
            "rendered": "0/1",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "backgroundColor": "#e20177",
              "progress": NaN,
              "scale": 0.5,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "width": 15,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
